# corevantage

./: CMakeLists.txt  README.md  corevantage.cpp  corevantage.h  corevantage.ui  readcfg.cpp
desktop/: corevantage.desktop
polkit/: org.jagoli.nvramtool.policy  org.jagoli.reboot.policy
src/t420/: aboutwindow.cpp  aboutwindow.ui  corevantage.cpp  corevantage.h  corevantage.ui  infowindow.h  infowindow.ui  readcfg.h
src/t430/: aboutwindow.h  corevantage.cpp  corevantage.h  corevantage.ui  infowindow.ui  readcfg.cpp
src/x200/: CMakeLists.txt  aboutwindow.cpp  aboutwindow.ui  corevantage.cpp  corevantage.h  corevantage.ui  infowindow.cpp  infowindow.ui  main.cpp
src/x201/: corevantage.cpp  corevantage.h  corevantage.ui  infowindow.ui  readcfg.h
src/x220/: corevantage.cpp  corevantage.h  corevantage.ui  infowindow.cpp  infowindow.ui  readcfg.h
src/x230/: corevantage.cpp  corevantage.h  corevantage.ui  infowindow.ui  readcfg.cpp
